--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 /* Reset some default styles */
-body, h1, h2, p {
+body, h1, h2, p, ul, li {
     margin: 0;
     padding: 0;
 }
@@ -40,6 +40,14 @@ section {
     padding: 40px;
 }
 
+/* Styling for skills list */
+#skills ul {
+    list-style: none;
+    font-size: 16px;
+    color: #aaa;
+    margin-left: 20px;
+}
+
 /* Styling for project showcases */
 .project {
     background-color: #222;
@@ -58,6 +66,7 @@ section {
 .project h3 {
     font-size: 1.8rem;
     margin-bottom: 10px;
+    color: #ffffff;
 }
 
 .project p {
